# vuedisk-rust

./: Cargo.toml
src/: fileutils.rs  imageutils.rs  main.rs  textutils.rs
static/: index.html
static/components/: FileUploadComponent.html
static/css/: index.css
static/css/theme/: index.css
static/js/: v-img.min.js
