[package]
name = "vuedisk"
version = "0.1.0"
edition = "2021"

[package.metadata.deb]
maintainer = "Ashish Doneriya <ashishdoneriya@gmail.com>"
copyright = "2023, Ashish Doneriya <ashishdoneriya@gmail.com>"

[profile.release]
opt-level = "s"
strip=true
lto=true
codegen-units=1

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
clap = { version = "4.3.19", features = ["derive"] }
image = "0.24.7"
mime_guess = "2.0.4"
rust-embed = "6.8.1"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.104"
symlink = "0.1.0"
